--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>To-do App</title>
+    <title>Do-Any</title>
     <link href="./styles/styles.css" rel="stylesheet" />
     <link href="./images/dan-logo.png" rel="icon" />
   </head>
